--- a/src/app.html
+++ b/src/app.html
@@ -55,7 +55,7 @@
                   <div class="cell">
                     <label>Price:</label>
                   </div>
-                  <div class="cell">$4.82</div>
+                  <div class="cell">₹3</div>
                 </div>
                 <div class="row">
                   <div class="cell">
@@ -91,7 +91,7 @@
                   <div class="cell">
                     <label>Price:</label>
                   </div>
-                  <div class="cell">$1.62</div>
+                  <div class="cell">₹2</div>
                 </div>
                 <div class="row">
                   <div class="cell">
@@ -125,7 +125,7 @@
                   <div class="cell">
                     <label>Price:</label>
                   </div>
-                  <div class="cell">$1.04</div>
+                  <div class="cell">₹1</div>
                 </div>
                 <div class="row">
                   <div class="cell">
@@ -144,7 +144,7 @@
         </div>
       </main>
 
-      <sidebar v-if="showSidebar" :toggle="toggleSidebar" />
+      <sidebar v-if="showSidebar" :toggle="toggleSidebar" :cart="cart" />
 
       <footer></footer>
     </div>
@@ -170,7 +170,6 @@
         methods: {
           addToCart(type) {
             this.cart[type] += this.inventory[type];
-            console.log(this.cart);
           },
           toggleSidebar() {
             this.showSidebar = !this.showSidebar;
@@ -179,7 +178,12 @@
       });
 
       app.component("sidebar", {
-        props: ["toggle"],
+        props: ["toggle", "cart"],
+        computed: {
+          cartTotal() {
+            return (this.cart.carrots * 3).toFixed(2);
+          },
+        },
         template: `
               <aside class="cart-container">
         <div class="cart">
@@ -207,9 +211,9 @@
                 <tr>
                   <td><i class="icofont-carrot icofont-3x"></i></td>
                   <td>Carrot</td>
-                  <td>$1.00</td>
-                  <td class="center">1</td>
-                  <td>$1.00</td>
+                  <td>₹ 3</td>
+                  <td class="center">{{cart.carrots}}</td>
+                  <td>₹ {{cart.carrots*3}}</td>
                   <td class="center">
                     <button class="btn btn-light cart-remove">
                       &times;
@@ -221,7 +225,7 @@
 
             <p class="center"><em>No items in cart</em></p>
             <div class="spread">
-              <span><strong>Total:</strong> $1.00</span>
+              <span><strong>Total :</strong> ₹ {{cartTotal}}</span>
               <button class="btn btn-light">Checkout</button>
             </div>
           </div>
