--- a/src/app.html
+++ b/src/app.html
@@ -38,8 +38,8 @@
         <h2>Recommended</h2>
 
         <div class="recommended">
-          <div class="card">
-            <div class="card-title">Carrots</div>
+          <div v-for="(product, index) in inventory.slice(0,3)" :key="product.id" class="card">
+            <div class="card-title">{{product.name}}</div>
             <div class="card-body">
               <i class="icofont-10x icofont-carrot"></i>
               <form>
@@ -48,97 +48,29 @@
                     <label>Type:</label>
                   </div>
                   <div class="cell">
-                    <em>Vegetable</em>
+                    <em>{{product.type}}</em>
                   </div>
                 </div>
                 <div class="row">
                   <div class="cell">
                     <label>Price:</label>
                   </div>
-                  <div class="cell">₹3</div>
+                  <div class="cell">₹ {{product.price.INR}}</div>
                 </div>
                 <div class="row">
                   <div class="cell">
                     <label>Quantity:</label>
                   </div>
                   <div class="cell">
-                    <input type="number" v-model.number="inventory.carrots" />
+                    <input type="number" v-model.number="product.quantity" />
                   </div>
                 </div>
               </form>
             </div>
             <div class="card-footer">
-              <button @click="addToCart('carrots')" class="btn btn-light">
+              <button @click="addToCart(product.name)" class="btn btn-light">
                 Add to cart
               </button>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-title">Pineapples</div>
-            <div class="card-body">
-              <i class="icofont-10x icofont-pineapple"></i>
-              <form>
-                <div class="row">
-                  <div class="cell">
-                    <label>Type:</label>
-                  </div>
-                  <div class="cell">
-                    <em>Fruit</em>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Price:</label>
-                  </div>
-                  <div class="cell">₹2</div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Quantity:</label>
-                  </div>
-                  <div class="cell">
-                    <input type="number" v-model="inventory.pineapples" />
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="card-footer">
-              <button class="btn btn-light">Add to cart</button>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-title">Cherries</div>
-            <div class="card-body">
-              <i class="icofont-10x icofont-cherry"></i>
-              <form>
-                <div class="row">
-                  <div class="cell">
-                    <label>Type:</label>
-                  </div>
-                  <div class="cell">
-                    <em>Fruit</em>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Price:</label>
-                  </div>
-                  <div class="cell">₹1</div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Quantity:</label>
-                  </div>
-                  <div class="cell">
-                    <input type="number" v-model="inventory.cherries" />
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="card-footer">
-              <button class="btn btn-light">Add to cart</button>
             </div>
           </div>
         </div>
@@ -155,11 +87,7 @@
         data() {
           return {
             showSidebar: false,
-            inventory: {
-              carrots: 0,
-              pineapples: 0,
-              cherries: 0,
-            },
+            inventory: [],
             cart: {
               carrots: 0,
               pineapples: 0,
@@ -174,6 +102,11 @@
           toggleSidebar() {
             this.showSidebar = !this.showSidebar;
           },
+        },
+        async mounted() {
+          const res = await fetch("./food.json");
+          const data = await res.json();
+          this.inventory = data;
         },
       });
 
