feat : removed items from cart

--- a/src/app.html
+++ b/src/app.html
@@ -88,6 +88,7 @@
         :toggle="toggleSidebar"
         :cart="cart"
         :inventory="inventory"
+        :remove="removeItem"
       />
 
       <footer></footer>
@@ -111,6 +112,9 @@
           toggleSidebar() {
             this.showSidebar = !this.showSidebar;
           },
+          removeItem(name){
+            delete this.cart[name]
+          },
         },
         async mounted() {
           const res = await fetch("./food.json");
@@ -120,7 +124,7 @@
       });
 
       app.component("sidebar", {
-        props: ["toggle", "cart", "inventory"],
+        props: ["toggle", "cart", "inventory", "remove"],
         computed: {},
         methods: {
           getPrice(name) {
@@ -168,7 +172,7 @@
                   <td class="center">{{quantity}}</td>
                   <td>₹ {{quantity * getPrice(key)}}</td>
                   <td class="center">
-                    <button class="btn btn-light cart-remove">
+                    <button @click="remove(key)" class="btn btn-light cart-remove">
                       &times;
                     </button>
                   </td>
