--- a/src/app.html
+++ b/src/app.html
@@ -108,12 +108,13 @@
           addToCart(name, index) {
             if (!this.cart[name]) this.cart[name] = 0;
             this.cart[name] += this.inventory[index].quantity;
+            this.inventory[index].quantity = 0;
           },
           toggleSidebar() {
             this.showSidebar = !this.showSidebar;
           },
           removeItem(name){
-            delete this.cart[name]
+            delete this.cart[name];
           },
         },
         async mounted() {
