feat : total cart items

--- a/src/app.html
+++ b/src/app.html
@@ -24,7 +24,7 @@
         </nav>
         <a @click="toggleSidebar" class="top-bar-cart-link">
           <i class="icofont-cart-alt icofont-1x"></i>
-          <span>Cart (0)</span>
+          <span><strong>{{totalQuantity}}</strong></span>
         </a>
       </header>
 
@@ -103,6 +103,13 @@
             inventory: [],
             cart: {},
           };
+        },
+        computed:{
+          totalQuantity(){
+            return Object.values(this.cart).reduce((acc, curr) => {
+              return acc + curr
+            },0)
+          },
         },
         methods: {
           addToCart(name, index) {
